# spacetraders

./: .gitignore  README.md  pyproject.toml  waypoints.json
exploration/: tutorial_first_mission.py  tutorial_new_game.py  tutorial_purchase_ship.py
src/: logging.py
src/domain/: agent.py  model.py  waypoint.py
src/orchestration/: create_agent.py  manage_contracts.py  purchase_ship.py
src/repositories/: agent.py  contract.py  system.py  waypoint.py
tests/integration/: test_run_tutorial.py
tests/unit/: test_contracts.py  test_create_agent.py  test_purchase_ship.py
