[project]
name = "spacetraders"
version = "0.0.1"
description = "Code used to play spacetraders.io"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {email = "yannick.schini@proton.me"},
]
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "requests",
]

[project.optional-dependencies]
test = [
  "pytest",
]
