[project]
name = "spacetraders"
version = "0.0.1"
description = "Code used to play spacetraders.io"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {email = "yannick.schini@proton.me"},
]
classifiers = [
  "Programming Language :: Python"
]

[tool.poetry]
name = "spacetraders"
version = "0.0.1"
description = "Code used to play spacetraders.io"
readme = "README.md"
authors =["Yannick Schini <yannick.schini@proton.me>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
poetry = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
mypy = "*"
types-requests = "*"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["exploration", "build"]

[tool.ruff]
target-version = "py311"
fix = true
